--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ runs/detect/bib_detector_v15/*.jpg
 runs/detect/bib_detector_v17/results.csv
 runs/detect/bib_detector_v17/*.jpg
 dataset/test.jpg
+runs/detect/bib_detector_v17/weights/best1.pt
+dataset/train/label1s.cache
+runs/detect/bib_detector_v17/weights/las1t.pt
